# online_farm_market

./: .env  .gitignore  Pipfile  README.md  alembic.ini  app.py  cleanup.sh  database.db  database.py  farm_market.db  farm_market.db.backup  models.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  schema.sql  test_db.py  test_farm_market.db  test_setup.py  verify_models.py  wsgi.py
migrations/: env.py
migrations/versions/: 0dd801543306_update_product_model_for_marketplace_.py  37ad57533897_update_farmer_model_with_contact_and_.py  3829bd5d787d_update_product_model_for_olx_style_.py  6f7eb53ef170_merge_product_model_updates.py  c5134a038d3d_initial_migration.py  e2ce2f824c28_update_transactionitem_model.py  update_product_model_sqlite.py
online_farm_market/: Pipfile  README.md  __init__.py  config.py  database.py  db.py
online_farm_market/cli/: __init__.py  admin.py  auth.py  main.py  products.py  transactions.py  utils.py
online_farm_market/models/: __init__.py  base.py  customer.py  farmer.py  order.py  product.py  transaction.py  user.py
online_farm_market/online_farm_market/: cli.py  db.py  models.py  seed.py  utils.py
routes/: __init__.py  auth.py  products.py  transactions.py
scripts/: populate_products.py
tests/: conftest.py  test_auth.py  test_cli.py  test_core_models.py  test_farmer_product_flow.py  test_models.py
